Prevent images from overflowing from parent
Fixes #426

--- a/dthm4kaiako/static/scss/website.scss
+++ b/dthm4kaiako/static/scss/website.scss
@@ -70,8 +70,13 @@ body {
   }
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .img-inline {
-    max-height: 1.5rem;
+  max-height: 1.5rem;
 }
 
 .img-y1 {
